--- a/linter/package.json
+++ b/linter/package.json
@@ -2,10 +2,10 @@
     "name": "linter",
     "type": "module",
     "bin": {
-        "init": "./init.js",
-        "lint": "./lint.sh"
+        "reslint:init": "./init.js",
+        "reslint": "./lint.sh"
     },
-    "dependencies": {
+    "devDependencies": {
         "ast-grep": "^0.1.0",
         "yaml": "^2.7.0"
     }
